# SpectroElectroChem-Suite

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Install_SpectroElectroChem_Suite_to_Desktop.bat  Install_required_Python_packages.bat  LICENSE  README.md  RELEASE_NOTES_v3.0.1.md  RELEASE_NOTES_v4.0.0.md  START_HERE.txt  Start_SpectroElectroChem_Suite.bat  Test_Installation.bat  main.py  pyproject.toml  requirements.txt  run_plugin.py
.github/workflows/: joss-paper.yml
docs/: GitHub_Release_Guide.md  SpectroElectroChem_Suite_User_Manual_v4.0.1.docx  Version_3_Notes.md  index.html
installer/: SpectroElectroChem_Suite_InnoSetup.iss
packaging/: SpectroElectroChem_Suite.spec
paper/: paper.bib  paper.md
scripts/: build_exe_windows.bat
src/spectroelectrochem_suite/: app.py  modern_app.py  updater.py
src/spectroelectrochem_suite/modules/: absorpto_fluoro_voltammogram.py  raman_spectrum_analysis.py  sers_raman_voltammogram.py
src/spectroelectrochem_suite/plugins/: plugin_manager.py  plugins.json
tests/: test_plugin_registry.py
